--- a/.env
+++ b/.env
@@ -1,14 +1,28 @@
-APP_NAME=QuizMaker
+# تنظیمات پایگاه داده
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=quizmaker
+DB_USERNAME=root
+DB_PASSWORD=
+
+# تنظیمات احراز هویت
+JWT_SECRET=your_secret_key_here
+JWT_EXPIRATION=3600
+REFRESH_TOKEN_EXPIRATION=2592000
+
+# تنظیمات سرور
 APP_ENV=development
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=quiz_maker
-DB_USERNAME=root
-DB_PASSWORD=
+# کانفیگ Redis
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
 
-JWT_SECRET=your_jwt_secret_key
-JWT_TTL=3600
+# تنظیمات ایمیل
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=your_email@gmail.com
+MAIL_PASSWORD=your_app_password
