--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,23 @@
 {
-    "name": "mparvare/quiz-maker",
-    "description": "Online quiz platform",
+    "name": "quizmaker/backend",
+    "description": "Quiz Maker Backend Application",
     "type": "project",
     "require": {
-        "php": ">=7.4",
-        "firebase/php-jwt": "^6.0",
-        "vlucas/phpdotenv": "^5.6",
-        "rakit/validation": "^1.4"
+        "php": "^8.1",
+        "firebase/php-jwt": "^6.4",
+        "vlucas/phpdotenv": "^5.5",
+        "monolog/monolog": "^2.5",
+        "respect/validation": "^2.2",
+        "guzzlehttp/guzzle": "^7.5",
+        "illuminate/database": "^9.0",
+        "symfony/http-foundation": "^6.2",
+        "symfony/routing": "^6.2",
+        "predis/predis": "^2.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "mockery/mockery": "^1.5",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
@@ -15,6 +26,8 @@
         }
     },
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit",
+        "lint": "phpcs",
+        "migrate": "php migration.php"
     }
 }
